DigicielFull/force-app/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Active__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Inactivate records to hide them from the timeline lwc</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>