DigicielFull/force-app/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Icon_Background_Colour__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Icon_Background_Colour__c</fullName>
    <inlineHelpText>The background colour to use for the icon</inlineHelpText>
    <label>Icon Background Colour</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>