DigicielFull/force-app/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Relationship_Name__c</fullName>
    <description>The API name corresponding to the relationship between the objects.</description>
    <inlineHelpText>The API name corresponding to the relationship between the objects. Note that custom relationships end with __r.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>