DigicielFull/force-app/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Test__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as test data only</description>
    <inlineHelpText>Used as test data only. Ignored for production operations.</inlineHelpText>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>